--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,8 +19,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: Install gtest
       uses: MarkusJx/googletest-installer@v1.1
-    - name: check for lcov
-      run: which gcov
+    - name: Install lcov
+      run: sudo apt-get install lcov
+    - name: execute which lcov
+      run: which lcov
 #     - name: build euler1D-VL
 #       working-directory: ./euler1D-VL/
 #       run: make
