added option for manually running workflow

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -5,6 +5,7 @@ on:
     branches: [ testing-prototype ]
   pull_request:
     branches: [ testing-prototype ]
+  workflow_dispatch:
 
 jobs:
 ################################################################################
