still trying to enable failure

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -49,6 +49,6 @@ jobs:
         files: coverage_all.info # optional
         flags: sandbox-tests # optional
         name: codecov-upload # optional
-#         fail_ci_if_error: true # optional (default = false)
+        fail_ci_if_error: true # optional (default = false)
         verbose: true # optional (default = false)
 ################################################################################
