--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -44,7 +44,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: codecov/codecov-action@v2
       with:
-        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
+#         token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         directory: ./
         files: coverage_all.info # optional
         flags: sandbox-tests # optional
