--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -43,59 +43,16 @@ jobs:
     - name: generate coverage report
       run: ./coverage-finder.sh
 
-    # Upload Coverage Report to Coveralls
-    - name: Coveralls Upload
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: ./tests/coverage_all.info
-        flag-name: No Ifdefs
-        parallel: true        
-################################################################################
-  Build-and-test-FUNC_1:
-    runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./tests
-
-    steps:
-    # Setup and Installing things
-    - uses: actions/checkout@v1
-    - name: Install gtest
-      uses: MarkusJx/googletest-installer@v1.1
-    - name: Install lcov
-      run: sudo apt-get install lcov
-
-    # Build Everything
-    - name: build euler1D-VL
-      working-directory: ./euler1D-VL/
-      run: make
-    - name: Build euler1D-VL object files for coverage
-      working-directory: ./euler1D-VL/
-      run: g++ -std=c++17 -Wall -Wextra -Wpedantic -fasynchronous-unwind-tables -fexceptions -D_GLIBCXX_ASSERTIONS -g --coverage -lgtest -lgtest_main -I/usr/local/Cellar/googletest/1.11.0/include -L/usr/local/Cellar/googletest/1.11.0/lib -lpthread -c *.cpp
-    - name: Build mhd1D object files for coverage
-      working-directory: ./mhd1D/
-      run: g++ -std=c++17 -Wall -Wextra -Wpedantic -fasynchronous-unwind-tables -fexceptions -D_GLIBCXX_ASSERTIONS -g --coverage -lgtest -lgtest_main -I/usr/local/Cellar/googletest/1.11.0/include -L/usr/local/Cellar/googletest/1.11.0/lib -lpthread -c *.cpp
-    - name: Build tests
-      run: export IFDEF_DEFINES="-DFUNC_1" && 
-           make
-
-    # Run Tests and Generate Coverage Report
-    - name: Run tests
-      run: ./Tests.exe
-    - name: generate coverage report
-      run: ./coverage-finder.sh
-
 #     # Upload Coverage Report to Coveralls
 #     - name: Coveralls Upload
 #       uses: coverallsapp/github-action@master
 #       with:
 #         github-token: ${{ secrets.GITHUB_TOKEN }}
 #         path-to-lcov: ./tests/coverage_all.info
-#         flag-name: FUNC_1
+#         flag-name: No Ifdefs
 #         parallel: true
-        
+
+    # Upload Coverage Report to Codecov
     - name: Codecov Upload
     - uses: actions/checkout@master
     - uses: codecov/codecov-action@v2
@@ -105,6 +62,52 @@ jobs:
         name: codecov-upload # optional
         fail_ci_if_error: true # optional (default = false)
         verbose: true # optional (default = false)
+
+# ################################################################################
+#   Build-and-test-FUNC_1:
+#     runs-on: ubuntu-latest
+
+#     defaults:
+#       run:
+#         working-directory: ./tests
+
+#     steps:
+#     # Setup and Installing things
+#     - uses: actions/checkout@v1
+#     - name: Install gtest
+#       uses: MarkusJx/googletest-installer@v1.1
+#     - name: Install lcov
+#       run: sudo apt-get install lcov
+
+#     # Build Everything
+#     - name: build euler1D-VL
+#       working-directory: ./euler1D-VL/
+#       run: make
+#     - name: Build euler1D-VL object files for coverage
+#       working-directory: ./euler1D-VL/
+#       run: g++ -std=c++17 -Wall -Wextra -Wpedantic -fasynchronous-unwind-tables -fexceptions -D_GLIBCXX_ASSERTIONS -g --coverage -lgtest -lgtest_main -I/usr/local/Cellar/googletest/1.11.0/include -L/usr/local/Cellar/googletest/1.11.0/lib -lpthread -c *.cpp
+#     - name: Build mhd1D object files for coverage
+#       working-directory: ./mhd1D/
+#       run: g++ -std=c++17 -Wall -Wextra -Wpedantic -fasynchronous-unwind-tables -fexceptions -D_GLIBCXX_ASSERTIONS -g --coverage -lgtest -lgtest_main -I/usr/local/Cellar/googletest/1.11.0/include -L/usr/local/Cellar/googletest/1.11.0/lib -lpthread -c *.cpp
+#     - name: Build tests
+#       run: export IFDEF_DEFINES="-DFUNC_1" && 
+#            make
+
+#     # Run Tests and Generate Coverage Report
+#     - name: Run tests
+#       run: ./Tests.exe
+#     - name: generate coverage report
+#       run: ./coverage-finder.sh
+
+#     # Upload Coverage Report to Coveralls
+#     - name: Coveralls Upload
+#       uses: coverallsapp/github-action@master
+#       with:
+#         github-token: ${{ secrets.GITHUB_TOKEN }}
+#         path-to-lcov: ./tests/coverage_all.info
+#         flag-name: FUNC_1
+#         parallel: true
+
 # ################################################################################
 #   Build-and-test-FUNC_2:
 #     runs-on: ubuntu-latest
