--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,9 +53,8 @@ jobs:
 #         parallel: true
 
     # Upload Coverage Report to Codecov
-    - name: Codecov Upload
-      uses: actions/checkout@master
-      uses: codecov/codecov-action@v2
+    - uses: actions/checkout@master
+    - uses: codecov/codecov-action@v2
       with:
         directory: ./
         flags: sandbox-tests # optional
