add ./ to beginning of filename arg

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -56,11 +56,11 @@ jobs:
     - uses: actions/checkout@master
     - uses: codecov/codecov-action@v2
       with:
-        files: coverage_all.info
+        files: ./coverage_all.info
         flags: sandbox-tests # optional
         name: codecov-upload # optional
         fail_ci_if_error: true # optional (default = false)
-        verbose: true # optional (default = false)
+#         verbose: true # optional (default = false)
 
 # ################################################################################
 #   Build-and-test-FUNC_1:
