--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,14 +53,13 @@ jobs:
 #         parallel: true
 
     # Upload Coverage Report to Codecov
-    - uses: actions/checkout@master
     - uses: codecov/codecov-action@v2
       with:
         files: ./coverage_all.info
         flags: sandbox-tests # optional
         name: codecov-upload # optional
         fail_ci_if_error: true # optional (default = false)
-#         verbose: true # optional (default = false)
+        verbose: true # optional (default = false)
 
 # ################################################################################
 #   Build-and-test-FUNC_1:
