check difference with no codecov.yml

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,4 +1,4 @@
-codecov:
-  branch: testing-prototype
-  fixes:
-    - "/home/runner/work/hydro-sandbox/::"
+# codecov:
+#   branch: testing-prototype
+#   fixes:
+#     - "/home/runner/work/hydro-sandbox/::"
