--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,42 @@
     "cSpell.words": [
         "Advec",
         "Advect",
-        "DFUNC",
-        "Eigens",
-        "Miyoshi",
-        "STREQ",
-        "Vhat",
         "arange",
         "codecov",
+        "DFUNC",
         "diaph",
         "dynload",
+        "Eigens",
         "loadtxt",
+        "Miyoshi",
         "modulos",
         "pyplot",
+        "STREQ",
         "timeit",
-        "upwinded"
+        "Uldst",
+        "Ulst",
+        "upwinded",
+        "Urdst",
+        "Urst",
+        "Vhat",
+        "Wlst",
+        "wrst",
+        "sdml",
+        "sdmr",
+        "cfmax",
+        "gpbl",
+        "gpbr",
+        "sqrtdl",
+        "sqrtdr",
+        "invsumd",
+        "ptst",
+        "vbstl",
+        "vbstr",
+        "bxsig",
+        "bxsq",
+        "barotropic",
+        "pflux",
+        "eqns"
     ],
     "files.associations": {
         "nanorc": "bat",
