Add a second main to Athena HLLD to help with finding specific values in the states

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,6 +43,14 @@
         "nanorc": "bat",
         "*.summit": "shellscript",
         "*.crc": "shellscript",
+        "*.hydro": "makefile",
+        "*.lux": "shellscript",
+        "*.spock": "makefile",
+        "*.c3po": "makefile",
+        "*.github": "makefile",
+        "*.particleTests": "makefile",
+        "*.particles": "makefile",
+        "*.mhd": "makefile",
         "iostream": "cpp",
         "array": "cpp",
         "atomic": "cpp",
@@ -124,7 +132,25 @@
         "thread": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "semaphore": "cpp"
+        "semaphore": "cpp",
+        "__bit_reference": "cpp",
+        "__bits": "cpp",
+        "__config": "cpp",
+        "__debug": "cpp",
+        "__errc": "cpp",
+        "__functional_base": "cpp",
+        "__hash_table": "cpp",
+        "__locale": "cpp",
+        "__mutex_base": "cpp",
+        "__node_handle": "cpp",
+        "__nullptr": "cpp",
+        "__split_buffer": "cpp",
+        "__string": "cpp",
+        "__threading_support": "cpp",
+        "__tuple": "cpp",
+        "ios": "cpp",
+        "locale": "cpp",
+        "queue": "cpp"
     },
     "python.pythonPath": "/Users/Bob/opt/anaconda3/bin/python"
 }
