update makefile for HIP

--- a/GPU_reduction/Makefile
+++ b/GPU_reduction/Makefile
@@ -3,6 +3,9 @@
 
 # compiler options, debug and performance
 cudaCompiler = nvcc -g -O3 -std=c++11 -arch sm_70 -fmad=false -I/usr/local/cuda-11.4/include
+hipCompiler = hipcc --offload-arch=gfx90a -g -O3 -std=c++11 -Wall -ferror-limit=1
+
+chollaFlags = -DCUDA -DMPI_CHOLLA -DPRECISION=2 -DPPMP -DHLLC -DVL -DDENSITY_FLOOR -DTEMPERATURE_FLOOR -DDE -DCPU_TIME -DOUTPUT -DHDF5 -DMPI_GPU -DPARALLEL_OMP -DN_OMP_THREADS=8 -DO_HIP
 
 # list of binaries to clean as well
 binaries = gpu_reductions.exe
@@ -10,11 +13,14 @@ binaries = gpu_reductions.exe
 # To switch between compiling the whole program every time and only compiling
 # what has changed simply replace NAME.cpp with NAME.o and $(Helper_SRC) with
 # $(Helper_OBJ). This will generate a lot of object files though
-gpu_reduction: gpu_reductions.cu
+cuda: gpu_reductions.cu
 	$(cudaCompiler) $? -o $@.exe
 
-%.o: %.cu
-	$(cudaCompiler) -c $<
+hip: gpu_reductions.cu
+	$(hipCompiler) $? -o $@.exe
+
+# %.o: %.cu
+# 	$(cudaCompiler) -c $<
 
 clean:
 	@echo "Cleaning up..."
